# Pair-logistic-mds

./: MANIFEST.in  README.md  pyproject.toml  run_pair_logistic_mds.py  setup.cfg
pair_logistic_mds/: __init__.py  cli.py  io_utils.py  model_fit.py  pair_scan.py  plot_cli.py  score_scan.py  tree_mds.py
pair_logistic_mds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pair_logistic_mds/scripts/: plot_pair_logistic_mds.R
