[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pair-logistic-mds"
version = "0.1.0"
description = "Pairwise SEER/pyseer-style logistic regression with tree-MDS covariates."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Seungwon Ko"}
]
keywords = ["microbial-gwas", "pyseer", "seer", "logistic-regression", "population-structure", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scipy>=1.7",
  "statsmodels>=0.13",
  "biopython>=1.79",
]

[project.scripts]
pair-logistic-mds = "pair_logistic_mds.cli:main"
pair-logistic-mds-plot = "pair_logistic_mds.plot_cli:main"

[tool.setuptools]
packages = ["pair_logistic_mds"]
include-package-data = false
