[metadata]
name = pair-logistic-mds
version = 0.1.0
description = Pairwise SEER/pyseer-style logistic regression with tree-MDS covariates.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy>=1.21
    pandas>=1.3
    scipy>=1.7
    statsmodels>=0.13
    biopython>=1.79

[options.package_data]
pair_logistic_mds = scripts/*.R

[options.entry_points]
console_scripts =
    pair-logistic-mds = pair_logistic_mds.cli:main
    pair-logistic-mds-plot = pair_logistic_mds.plot_cli:main